fix seasir main page alignment

--- a/_sass/minima/_index-brief.scss
+++ b/_sass/minima/_index-brief.scss
@@ -40,7 +40,7 @@
   }
   .brief-container {text-align:center}
   .brief-photo {max-width: 410px}
-  .brief-text  {width: 100% !important;max-width: 440px;margin:10px auto;}
+  .brief-text  {width: 100% !important;max-width: 410px;margin:1em auto 3em auto;text-align:left}
 }
 
 .brief-text, .brief-photo {
@@ -86,7 +86,6 @@
 }
 
 .brief-text {
-    height: 260px;
     width: 440px;
     hr {
         position:absolute;
@@ -103,7 +102,7 @@
 .brief-text-body {
   margin: 0 10px;
   font-family: $base-font-family;
-  position: absolute;
+  position: relative;
   top: 45px;
   font-size: 0.8em;
   color: $grey-color;
